# crs

./: README.md  pyproject.toml
crs/: __init__.py  __main__.py
modules/anisq/: __init__.py  cheese.py
