[project]
name = "crs"
dynamic = ["version"]
description = "Central routing system"
authors = [
    { name = "iiPython", email = "ben@iipython.dev" }
]
dependencies = [
    "indigo-logger",
    "orjson>=3.10.13",
    "pydantic>=2.10.4",
    "watchdog>=6.0.0",
    "websockets>=14.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "crs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["crs"]

[tool.uv.sources]
indigo-logger = { git = "https://github.com/iiPythonx/il" }
